@@ -49,7 +49,7 @@
 					<nativeReleaseVersion>${project.version}</nativeReleaseVersion>
 					<appName>${project.artifactId}</appName>
 					<verbose>true</verbose>
-					<jvmArgs>-Xmx4096m</jvmArgs>
+					<jvmArgs>-Xmx4096m --add-exports=javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED --add-exports=javafx.base/com.sun.javafx.runtime=ALL-UNNAMED  --add-opens=javafx.graphics/com.sun.javafx.css=ALL-UNNAMED </jvmArgs>
 					<vendor>Jonathon Walker</vendor>
 				</configuration>
 				<executions>
